Fix → added negative z-index to hide class

--- a/src/assets/style/partials/_utility.scss
+++ b/src/assets/style/partials/_utility.scss
@@ -1,3 +1,4 @@
 .hide{
     opacity: 0;
+    z-index: -1;
 }
